<resources>
    <string name="app_name">test3</string>
    <string name="GradeMarkSystem">Grade Mark System</string>
    <string name="Name"></string>
    <string name="YourSelection">Your Selection</string>
    <string name="score"></string>
    <string name="resultText"></string>
    <string name="submitButton">Submit</string>
    <string name="ContactUS">Contact Us</string>
    <string name="callUS">Call Us</string>
    <string name="name2">Name:</string>
    <string name="Course2">Course:</string>
    <string name="Score2">Score:</string>
    <string name="Grade2">Grade:</string>
    <string-array name="courseCode">
        <item>BAIT2073</item>
        <item>AACS3353</item>
        <item>AACS2284</item>
        <item>AACS2034</item>
    </string-array>
</resources>